@@ -9,6 +9,8 @@ Changes since 1.6.2:
    the default of reading "site.exp".  See the manual for details.
 3. A utility procedure relative_filename has been added.  This procedure
    computes a relative file name to a given destination from a given base.
+4. The utility procedure 'grep' now accepts a '-n' option that
+   includes line numbers in the output, consistent with GNU grep.
 
 Changes since 1.6.1:
 
